RESOLVED FIXED236457
The GPU process should not check in with Launch Services
https://bugs.webkit.org/show_bug.cgi?id=236457
Summary The GPU process should not check in with Launch Services
Per Arne Vollan
Reported 2022-02-10 11:04:34 PST
Since the GPU and Networking process are not applications in the normal sense, there is no need to call _LSApplicationCheckIn.
Attachments
Patch (2.07 KB, patch)
2022-02-10 11:06 PST, Per Arne Vollan
ggaren: review+
Patch (1.41 KB, patch)
2022-02-11 09:32 PST, Per Arne Vollan
ews-feeder: commit-queue-
Patch (1.68 KB, patch)
2022-02-11 10:19 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2022-02-10 11:06:01 PST
Geoffrey Garen
Comment 2 2022-02-10 11:45:16 PST
Comment on attachment 451575 [details] Patch r=me
Per Arne Vollan
Comment 3 2022-02-11 09:32:21 PST
Per Arne Vollan
Comment 4 2022-02-11 09:32:44 PST
(In reply to Geoffrey Garen from comment #2) > Comment on attachment 451575 [details] > Patch > > r=me Thanks for reviewing!
Per Arne Vollan
Comment 5 2022-02-11 10:19:09 PST
EWS
Comment 6 2022-02-11 10:33:58 PST
Patch 451709 does not build
EWS
Comment 7 2022-02-11 11:36:06 PST
Committed r289639 (247144@main): <https://commits.webkit.org/247144@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 451720 [details].
Radar WebKit Bug Importer
Comment 8 2022-02-11 11:37:18 PST
Note You need to log in before you can comment on or make changes to this bug.