The GPU process should not check in with Launch Services https://bugs.webkit.org/show_bug.cgi?id=236457

Reviewed by Geoffrey Garen.

Since the GPU process is not an application in the normal sense, there is no need to call _LSApplicationCheckIn.
The function _CSCheckFixDisable should still be called.

* GPUProcess/mac/GPUProcessMac.mm:
(WebKit::GPUProcess::initializeProcess):



Canonical link: https://commits.webkit.org/247144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289639 268f45cc-cd09-0410-ab3c-d52691b4dbfc